--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -12,6 +12,9 @@ jobs:
           submodules: true
           lfs: false
 
+      - name: List Repository Files
+        run: ls -R
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -22,7 +25,7 @@ jobs:
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_build_command: 'yarn build' # App build command
-          app_location: '/apps/nuxt-checkout/' # App source code path
+          app_location: 'apps/nuxt-checkout/' # App source code path
           api_location: '.output/server' # Api source code path - optional
           output_location: '.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
