--- a/apps/nuxt-checkout/package.json
+++ b/apps/nuxt-checkout/package.json
@@ -27,5 +27,9 @@
     "eslint": "^9",
     "nuxt": "^3.13.0",
     "typescript": "^5.4.2"
-  }
+  },
+  "packageManager": "yarn@1.22.22",
+  "engines": {
+    "node": ">=20"
+  },
 }
