--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -24,8 +24,9 @@ jobs:
           action: 'upload'
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_build_command: 'yarn build' # App build command
-          app_location: '/apps/nuxt-checkout/' # App source code path
-          api_location: '.output/server' # Api source code path - optional
-          output_location: '.output/public' # Built app content directory - optional
+
+          app_location: '/' # App source code path
+          app_build_command: 'yarn build:nuxt' # App build command
+          api_location: 'apps/nuxt-app/.output/server' # Api source code path - optional
+          output_location: 'apps/nuxt-app/.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
