--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -6,15 +6,6 @@ jobs:
     name: Build and Deploy Job
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout the repository
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
-          lfs: false
-
-      - name: List Repository Files
-        run: ls -R
-
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -27,6 +18,6 @@ jobs:
 
           app_location: '/' # App source code path
           app_build_command: 'yarn build:nuxt' # App build command
-          api_location: 'apps/nuxt-app/.output/server' # Api source code path - optional
+          # api_location: 'apps/nuxt-app/.output/server' # Api source code path - optional
           output_location: 'apps/nuxt-app/.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
