--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -6,6 +6,12 @@ jobs:
     name: Build and Deploy Job
     runs-on: ubuntu-latest
     steps:
+      # Step 1: Checkout the repository
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+          lfs: false
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
