--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -3,15 +3,13 @@ on: workflow_dispatch
 
 jobs:
   build_and_deploy_job:
-    name: Build and Deploy Job
     runs-on: ubuntu-latest
+    name: Build and Deploy Job
     steps:
-      # Step 1: Checkout the repository
       - uses: actions/checkout@v3
         with:
           submodules: true
           lfs: false
-
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -21,9 +19,7 @@ jobs:
           action: 'upload'
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-
-          app_location: '/' # App source code path
-          app_build_command: 'yarn build:nuxt' # App build command
-          # api_location: 'apps/nuxt-app/.output/server' # Api source code path - optional
-          output_location: 'apps/nuxt-app/.output/public' # Built app content directory - optional
+          app_location: 'apps/nuxt-app/' # App source code path
+          api_location: '.output/server' # Api source code path - optional
+          output_location: '.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
