--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -10,6 +10,13 @@ jobs:
         with:
           submodules: true
           lfs: false
+
+      # Step 2: Set up Node.js environment
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20' # Adjust to your Node.js version
+
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
@@ -20,6 +27,7 @@ jobs:
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: 'apps/nuxt-app/' # App source code path
+          app_build_command: 'npm run build:nuxt'
           api_location: '.output/server' # Api source code path - optional
           output_location: '.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
