--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -27,7 +27,7 @@ jobs:
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: 'apps/nuxt-app/' # App source code path
-          app_build_command: 'npm run build:nuxt'
+          app_build_command: 'npm run build'
           api_location: '.output/server' # Api source code path - optional
           output_location: '.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
