--- a/.github/workflows/test-ca.yml
+++ b/.github/workflows/test-ca.yml
@@ -27,7 +27,7 @@ jobs:
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: '/' # App source code path
-          app_build_command: 'npm run build'
+          app_build_command: 'yarn build:nuxt'
           api_location: 'apps/nuxt-app/.output/server' # Api source code path - optional
           output_location: 'apps/nuxt-app/.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
