--- a/.github/workflows/ca.yml
+++ b/.github/workflows/ca.yml
@@ -20,18 +20,14 @@ jobs:
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
-        env:
-          PRE_BUILD_COMMAND: npm i
-          CUSTOM_BUILD_COMMAND: npm run build && cp -r .next/standalone/apps/web/. .next/standalone
-          VERBOSE: true
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_APPS_CHECKOUT }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: 'upload'
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
-          app_location: 'apps/nuxt-app' # App source code path
-          app_build_command: 'npm run build' # Adjust to your build command
-          api_location: '' # Api source code path - optional
-          output_location: '' # Built app content directory - optional
+          app_location: '/' # App source code path
+          app_build_command: 'yarn build:nuxt'
+          api_location: '/apps/nuxt-app/.output/server' # Api source code path - optional
+          output_location: '/apps/nuxt-app/.output/public' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
