--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "dev:test": "turbo dev --filter=test-app",
-    "dev:nuxt": "turbo dev --filter=nuxt-app",
-    "dev:checkout": "turbo dev --filter=nuxt-checkout",
-    "start:nuxt": "turbo start --filter=nuxt-app",
-    "build:nuxt": "turbo build --filter=nuxt-app",
-    "build:checkout": "turbo build --filter=nuxt-checkout",
+    "dev:nuxt": "turbo dev --filter=nuxt-*",
+    "start:nuxt": "turbo start --filter=nuxt-*",
+    "build:nuxt": "turbo build --filter=nuxt-*",
     "build:sdk": "turbo build --filter=./packages/sdk/*",
     "lint": "turbo lint",
     "link": "turbo run link",
