--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "packages/sdk/*"
   ],
   "scripts": {
-    "build": "yarn codegen &&  turbo build",
+    "build": "turbo build",
     "dev": "turbo dev",
-    "dev:test": "turbo dev --filter=test-app",
-    "dev:nuxt": "turbo dev --filter=nuxt-app",
-    "start:nuxt": "turbo start --filter=nuxt-app",
-    "build:nuxt": "turbo build --filter=nuxt-app",
+    "dev:nuxt": "turbo dev --filter=nuxt-*",
+    "start:nuxt": "turbo start --filter=nuxt-*",
+    "build:nuxt": "turbo build --filter=nuxt-*",
     "build:sdk": "turbo build --filter=./packages/sdk/*",
     "lint": "turbo lint",
     "link": "turbo run link",
