--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/types",
-  "version": "0.3.9",
+  "version": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
