--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/cms",
-  "version": "0.3.9",
+  "version": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,14 +16,14 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "0.3.9"
+    "@geins/core": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@geins/eslint-config": "0.1.8",
+    "@geins/eslint-config": "0.1.9-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
     "typescript": "^5.6.2",
     "eslint": "^9.11.1"
   }
