--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/core",
-  "version": "0.3.9",
+  "version": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -22,8 +22,8 @@
     "broadcast-channel": "^7.0.0"
   },
   "devDependencies": {
-    "@geins/types": "0.3.9",
-    "@geins/eslint-config": "0.1.8",
+    "@geins/types": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
+    "@geins/eslint-config": "0.1.9-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-graphql": "^2.0.5",
     "@rollup/plugin-node-resolve": "^15.3.0",
