--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,10 +1,6 @@
 {
   "name": "@geins/cms",
-<<<<<<< HEAD
-  "version": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
-=======
   "version": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
->>>>>>> 5516347da530cf07ac1dead6be1323755f456167
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -20,22 +16,14 @@
     "link": "yarn link"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@geins/core": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e"
-=======
-    "@geins/core": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4"
->>>>>>> 5516347da530cf07ac1dead6be1323755f456167
+    "@geins/core": "*"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-<<<<<<< HEAD
-    "@geins/eslint-config": "0.1.9-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
-=======
-    "@geins/eslint-config": "0.1.9-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
->>>>>>> 5516347da530cf07ac1dead6be1323755f456167
+    "@geins/eslint-config": "*",
     "typescript": "^5.6.2",
     "eslint": "^9.11.1"
   }
