--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,10 +1,6 @@
 {
   "name": "@geins/crm",
-<<<<<<< HEAD
   "version": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
-=======
-  "version": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
->>>>>>> 5516347da530cf07ac1dead6be1323755f456167
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -20,19 +16,11 @@
     "link": "yarn link"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "@geins/core": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e"
+    "@geins/core": "*"
   },
   "devDependencies": {
-    "@geins/eslint-config": "0.1.9-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
-    "@geins/types": "0.3.10-canary-b4f384b9deaf8c6c36d7279cdb6a62d1dc40d78e",
-=======
-    "@geins/core": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4"
-  },
-  "devDependencies": {
-    "@geins/eslint-config": "0.1.9-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
-    "@geins/types": "0.3.10-canary-a231b735f9866e06454595f24a08fc6b6c352bc4",
->>>>>>> 5516347da530cf07ac1dead6be1323755f456167
+    "@geins/eslint-config": "*",
+    "@geins/types": "*",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
