--- a/packages/config/eslint-config/package.json
+++ b/packages/config/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/eslint-config",
-  "version": "0.1.8",
+  "version": "0.1.9-canary-041e5f03d0f47a30733c0c2fba70ccb3dba3e26b",
   "private": true,
   "type": "module",
   "module": "./eslint-config.js",
