--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/crm",
-  "version": "0.3.10-canary-041e5f03d0f47a30733c0c2fba70ccb3dba3e26b",
+  "version": "0.3.10-canary-9e45fd154702919aa27d04abc76e4e7d581975ff",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,11 +16,11 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "*"
+    "@geins/core": "0.3.10-canary-9e45fd154702919aa27d04abc76e4e7d581975ff"
   },
   "devDependencies": {
-    "@geins/eslint-config": "0.1.9-canary-041e5f03d0f47a30733c0c2fba70ccb3dba3e26b",
-    "@geins/types": "*",
+    "@geins/eslint-config": "0.1.9-canary-9e45fd154702919aa27d04abc76e4e7d581975ff",
+    "@geins/types": "0.3.10-canary-9e45fd154702919aa27d04abc76e4e7d581975ff",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
