feat: clean up and add docs

--- a/.prettierrc
+++ b/.prettierrc
@@ -5,4 +5,7 @@
   "endOfLine": "auto",
   "arrowParens": "always",
   "singleQuote": true,
+  "plugins": [
+    "prettier-plugin-organize-imports"
+  ]
 }
