--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,8 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+ordered_imports = true
+max_line_length = 210
 
 [*.md]
 trim_trailing_whitespace = false
