--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@algolia/client-search": "^4.24.0"
   },
   "dependencies": {
+    "prettier-plugin-organize-imports": "^4.1.0",
     "vitepress-plugin-group-icons": "^1.3.3"
   }
 }
