--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "vitepress-plugin-group-icons": "^1.3.3",
     "@geins/core": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91",
     "@geins/oms": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91",
-    "@geins/types": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91",
+    "@geins/types": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
