--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -16,7 +16,7 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823"
+    "@geins/core": "*"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
