--- a/packages/sdk/core/package.json
+++ b/packages/sdk/core/package.json
@@ -22,7 +22,7 @@
     "broadcast-channel": "^7.0.0"
   },
   "devDependencies": {
-    "@geins/types": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823",
+    "@geins/types": "*",
     "@geins/eslint-config": "0.2.1",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-graphql": "^2.0.5",
