--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/crm",
-  "version": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823",
+  "version": "0.4.2",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,11 +16,11 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823"
+    "@geins/core": "*"
   },
   "devDependencies": {
     "@geins/eslint-config": "0.2.1",
-    "@geins/types": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823",
+    "@geins/types": "*",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
