--- a/package.json
+++ b/package.json
@@ -75,10 +75,7 @@
     "vite": "^5.4.12",
     "vitepress": "^1.5.0",
     "vitepress-plugin-mermaid": "^2.0.17",
-    "vitepress-plugin-group-icons": "^1.3.3",
-    "@geins/core": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91",
-    "@geins/oms": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91",
-    "@geins/types": "0.4.2-canary-d296455008634b675c95498df3bb350d0d0bad91"
+    "vitepress-plugin-group-icons": "^1.3.3"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
