--- a/packages/sdk/oms/package.json
+++ b/packages/sdk/oms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/oms",
-  "version": "0.4.2-canary-f89b9fa822bf743ef392241754ecc42bf3175823",
+  "version": "0.4.1",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
