--- a/package.json
+++ b/package.json
@@ -74,7 +74,11 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.12",
     "vitepress": "^1.5.0",
-    "vitepress-plugin-mermaid": "^2.0.17"
+    "vitepress-plugin-mermaid": "^2.0.17",
+    "vitepress-plugin-group-icons": "^1.3.3",
+    "@geins/core": "*",
+    "@geins/oms": "*",
+    "@geins/types": "*"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
@@ -82,8 +86,5 @@
   },
   "resolutions": {
     "@algolia/client-search": "^4.24.0"
-  },
-  "dependencies": {
-    "vitepress-plugin-group-icons": "^1.3.3"
   }
 }
