--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geins-typescript-sdk",
-  "version": "0.3.1",
+  "version": "0.4.2",
   "author": "Geins",
   "private": true,
   "license": "MIT",
@@ -13,9 +13,9 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "dev:nuxt": "turbo dev --filter=nuxt-app",
-    "start:nuxt": "turbo start --filter=nuxt-*",
-    "build:nuxt": "turbo build --filter=nuxt-*",
+    "dev:apps": "turbo dev --filter=./apps/*",
+    "start:apps": "turbo start --filter=./apps/*",
+    "build:apps": "turbo build --filter=./apps/*",
     "build:sdk": "turbo build --filter=./packages/sdk/*",
     "lint": "turbo lint",
     "link": "turbo run link",
@@ -67,13 +67,18 @@
     "mermaid": "^11.3.0",
     "prettier": "^3.3.3",
     "prettier-plugin-vue": "^1.1.6",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "search-insights": "^2.17.2",
     "ts-jest": "^29.2.5",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
     "vite": "^5.4.12",
     "vitepress": "^1.5.0",
-    "vitepress-plugin-mermaid": "^2.0.17"
+    "vitepress-plugin-mermaid": "^2.0.17",
+    "vitepress-plugin-group-icons": "^1.3.3",
+    "@geins/core": "*",
+    "@geins/oms": "*",
+    "@geins/types": "*"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
@@ -81,9 +86,5 @@
   },
   "resolutions": {
     "@algolia/client-search": "^4.24.0"
-  },
-  "dependencies": {
-    "prettier-plugin-organize-imports": "^4.1.0",
-    "vitepress-plugin-group-icons": "^1.3.3"
   }
 }
