--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@geins/cms",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "main": "dist/index.cjs",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -16,7 +16,7 @@
     "link": "yarn link"
   },
   "dependencies": {
-    "@geins/core": "0.4.1"
+    "@geins/core": "*"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
