--- a/.github/workflows/release-app-docs.yml
+++ b/.github/workflows/release-app-docs.yml
@@ -20,12 +20,12 @@ jobs:
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_DOCS }}
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           action: 'upload'
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
           app_location: '/' # App source code path
-          app_build_command: 'npm run docs:build'
+          app_build_command: 'npm run build:apps'
           api_location: '' # Api source code path - optional
-          output_location: 'docs/.vitepress/dist' # Built app content directory - optional
+          output_location: 'apps/docs/.vitepress/dist' # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
