feat(oms): parse prices + fix token form

--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "clean": "node scripts/clean.cjs",
     "codegen": "yarn workspace @geins/types codegen",
     "prepare-schema": "node scripts/prepare-schema.js",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs",
+    "docs:dev": "vitepress dev apps/docs",
+    "docs:build": "vitepress build apps/docs",
+    "docs:preview": "vitepress preview apps/docs",
     "docs:update": "node scripts/updateDocs.cjs",
     "test": "jest",
     "test:watch": "jest --watch",
