--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "type": "module",
   "devDependencies": {
-    "vitepress": "^1.6.3",
+    "@geins/core": "0.5.0",
+    "@geins/oms": "0.5.0",
+    "@geins/types": "0.5.0",
     "@mermaid-js/mermaid-mindmap": "^9.3.0",
     "canvas-confetti": "^1.9.3",
     "mermaid": "^11.3.0",
     "vite": "^5.4.12",
-    "vitepress-plugin-mermaid": "^2.0.17",
+    "vitepress": "^1.6.3",
     "vitepress-plugin-group-icons": "^1.3.3",
-    "@geins/core": "0.5.0",
-    "@geins/oms": "0.5.0",
-    "@geins/types": "0.5.0"
+    "vitepress-plugin-mermaid": "^2.0.17"
   },
   "scripts": {
     "dev": "vitepress dev",
@@ -21,5 +21,8 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "vitepress-plugin-llms": "^1.3.3"
   }
 }
