--- a/packages/sdk/types/package.json
+++ b/packages/sdk/types/package.json
@@ -34,6 +34,7 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
     "eslint": "^9.11.1",
+    "rollup": "^4.20.0",
     "typescript": "^5.6.2"
   }
 }
