fix: SDK hardening — security, reliability, and error handling improvements
- Default fetch policy to NO_CACHE on server to prevent stale shared cache
- Per-operation user token override to avoid shared mutable state
- Fetch timeouts (10s) on all HTTP clients to prevent hung requests
- Preserve error cause chains across OMS service catch blocks
- GraphQLService: propagate errors instead of swallowing them
- Fix operator precedence bug in cart package detection
- Channel singleton guard to prevent duplicate instantiation
- CookieService null-safety guards
- Auth client error propagation and timeout support
- httpOnly + sameSite cookie hardening
- JSDoc security warnings on unverified JWT decode
- Add ES2022.Error lib for ErrorOptions type support

--- a/packages/sdk/oms/tsconfig.json
+++ b/packages/sdk/oms/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES5",
+        "lib": ["ES5", "ES2022.Error"],
         "module": "ESNext",
         "moduleResolution": "node",
         "declaration": true,
