--- a/packages/sdk/cms/package.json
+++ b/packages/sdk/cms/package.json
@@ -24,9 +24,11 @@
     "link": "yarn link"
   },
   "peerDependencies": {
-    "@geins/core": ">=0.6.0"
+    "@geins/core": "*"
   },
   "devDependencies": {
+    "@geins/core": "*",
+    "@geins/types": "*",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-typescript": "^12.1.0",
