--- a/packages/sdk/crm/package.json
+++ b/packages/sdk/crm/package.json
@@ -24,9 +24,10 @@
     "link": "yarn link"
   },
   "peerDependencies": {
-    "@geins/core": ">=0.6.0"
+    "@geins/core": "*"
   },
   "devDependencies": {
+    "@geins/core": "*",
     "@geins/eslint-config": "0.2.1",
     "@geins/types": "*",
     "@rollup/plugin-commonjs": "^28.0.0",
